src/objects/Orchestrator_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>Custom_Metadata_Item_Name__c</fullName>
        <description>The API name/developername of the custom metadata item in the custom metadata object defined where the parameters for this integration run are to be picked up from.</description>
        <inlineHelpText>The API name/developername of the custom metadata item in the custom metadata object defined where the parameters for this integration run are to be picked up from.</inlineHelpText>
        <label>Custom Metadata Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Metadata_Object_Name__c</fullName>
        <description>The API name/developername of the custom metadata object where the parameters for this integration run are to be picked up from</description>
        <inlineHelpText>The API name/developername of the custom metadata object where the parameters for this integration run are to be picked up from</inlineHelpText>
        <label>Custom Metadata Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jobs__c</fullName>
        <label>Jobs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Orchestrator Configuration</label>
    <pluralLabel>Orchestrator Configuration</pluralLabel>
</CustomObject>